--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "canvas": "^3.1.0",
     "d3-delaunay": "^6.0.4",
+    "delaunator": "^5.0.1",
+    "fast-2d-poisson-disk-sampling": "^1.0.3",
+    "flatqueue": "^2.0.3",
     "next": "15.2.3",
     "pixi.js": "^8.9.0",
     "react": "^19.0.0",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/delaunator": "^5.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
